<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_image_format"/>

        <RadioGroup
                android:id="@+id/rg_format_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/radio_jpg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:checked="true"
                    android:text="@string/image_format_jpg"/>

            <RadioButton
                    android:id="@+id/radio_png"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/image_format_png"/>

        </RadioGroup>

        <EditText
                android:id="@+id/et_extra_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/extra_data"/>

        <Button
                android:id="@+id/btn_write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write"/>

        <TextView
                android:id="@+id/tv_save_data_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"/>

        <Button
                android:id="@+id/btn_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read"/>

        <TextView
                android:id="@+id/tv_read_data_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>