<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="15dp">

        <Button
                android:id="@+id/btn_insert_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_image_extra_data"/>

        <Button
                android:id="@+id/btn_append_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/append_image_extra_data"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_image_extra_data"/>

    </LinearLayout>

</RelativeLayout>